--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -1,177 +1,2 @@
-@use '../core' as *;
-
-@mixin styles {
-  ::selection {
-    background: accent(5);
-    color: #fff;
-  }
-
-  body {
-    @include smooth-font;
-    font-family: font(sans);
-    font-size: font(md);
-    font-weight: font(normal);
-  }
-
-  sub,
-  sup {
-    font-size: 0.75em;
-    position: relative;
-  }
-
-  sub {
-    bottom: -0.25em;
-    left: 0.25em;
-  }
-
-  sup {
-    left: 0.25em;
-    top: -0.5em;
-  }
-
-  pre,
-  code {
-    font-family: font(mono);
-    font-size: font(sm);
-  }
-
-  pre {
-    @include responsive-padding;
-    @include rounded;
-    background-color: fill(code-bg);
-    color: fill(code-text);
-    overflow-x: auto;
-    position: relative;
-  }
-
-  code::before {
-    color: fill(text, 4);
-    content: attr(data-lang);
-    font-size: font(xs);
-    position: absolute;
-    right: 1rem;
-    top: 0.7rem;
-  }
-
-  blockquote {
-    border-left-color: fill(quote-border);
-    border-left-width: 0.25rem;
-    color: fill(quote-text);
-    font-style: italic;
-    font-weight: font(medium);
-    margin-bottom: 1.6em;
-    margin-top: 1.6em;
-    padding-left: 1em;
-
-    p {
-      margin-bottom: 1.25em;
-      margin-top: 1.25em;
-    }
-
-    p:first-of-type {
-      &::before {
-        content: open-quote;
-      }
-    }
-
-    p:last-of-type {
-      &::after {
-        content: close-quote;
-      }
-    }
-  }
-
-  a {
-    border-bottom: 1px solid accent(5);
-    color: fill(text, 1);
-    font-weight: font(medium);
-    text-decoration: none;
-    transition: all 50ms linear;
-
-    &:hover {
-      border-bottom-width: 2px;
-    }
-  }
-
-  img {
-    height: auto;
-    user-select: none;
-  }
-
-  iframe {
-    height: 100%;
-    width: 100%;
-  }
-
-  figure {
-    margin-left: 0;
-    margin-right: 0;
-
-    figcaption {
-      margin-top: space(8);
-      text-align: center;
-    }
-  }
-
-  // Forms
-  [type='date'],
-  [type='datetime'],
-  [type='datetime-local'],
-  [type='email'],
-  [type='month'],
-  [type='number'],
-  [type='password'],
-  [type='search'],
-  [type='tel'],
-  [type='text'],
-  [type='time'],
-  [type='url'],
-  [type='week'],
-  textarea,
-  select {
-    font-size: 1rem;
-    line-height: 1.5;
-    padding: 0.5em 0.75em;
-  }
-
-  [type='checkbox'],
-  [type='radio'] {
-    height: 1em;
-    width: 1em;
-
-    &:checked {
-      background-color: currentColor;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      border-color: transparent;
-    }
-  }
-
-  [type='checkbox'] {
-    &:checked {
-      background-image: svg-encode(
-        '<svg viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z"/></svg>'
-      );
-    }
-  }
-
-  [type='radio'] {
-    border-radius: 9999px;
-
-    &:checked {
-      background-image: svg-encode(
-        '<svg viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg"><circle cx="8" cy="8" r="3"/></svg>'
-      );
-    }
-  }
-
-  select {
-    background-image: svg-encode(
-      '<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16"><path stroke="#{theme(colors, gray, 5)}" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2 5l6 6 6-6" /></svg>'
-    );
-    background-position: right 0.75em center;
-    background-repeat: no-repeat;
-    background-size: 16px 12px;
-  }
-}
+// @mixin styles {
+// }
