--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,6 +1,5 @@
 @forward 'config';
+@forward 'helpers';
 @forward 'theme';
-@forward 'core';
+@forward 'api';
 @forward 'base';
-@forward 'components';
-@forward 'utilities';
