--- a/scss/koi-styles.scss
+++ b/scss/koi-styles.scss
@@ -1,6 +1,6 @@
 @use 'koi' as *;
 
-@include theme;
+// @include theme;
 @include base;
-@include components;
-@include utilities;
+// @include components;
+// @include utilities;
