--- a/scss/tokens/_index.scss
+++ b/scss/tokens/_index.scss
@@ -2,40 +2,17 @@
 //   Tokens
 // --------------------------------
 
-@use 'aspect' as *;
-@use 'blur' as *;
-@use 'border' as *;
-@use 'colors' as *;
-@use 'delay' as *;
-@use 'duration' as *;
-@use 'keyframes' as *;
-@use 'layer' as *;
-@use 'opacity' as *;
-@use 'screens' as *;
-@use 'shadow' as *;
-@use 'spacing' as *;
-@use 'timing' as *;
-@use 'typography' as *;
-
-$tokens: (
-  aspect: $aspect,
-  blur: $blur,
-  radius: $radius,
-  colors: $colors,
-  delay: $delay,
-  gradients: $gradients,
-  duration: $duration,
-  keyframes: $keyframes,
-  layer: $layer,
-  opacity: $opacity,
-  screens: $screens,
-  shadow: $shadow,
-  spacing: $spacing,
-  sizes: $sizes,
-  timing: $timing,
-  font-family: $font-family,
-  font-size: $font-size,
-  font-weight: $font-weight,
-  leading: $leading,
-  tracking: $tracking,
-);
+@forward 'aspect';
+@forward 'blur';
+@forward 'border';
+@forward 'colors';
+@forward 'delay';
+@forward 'duration';
+@forward 'keyframes';
+@forward 'layer';
+@forward 'opacity';
+@forward 'screens';
+@forward 'shadow';
+@forward 'spacing';
+@forward 'timing';
+@forward 'typography';
