--- a/scss/tokens/_typography.scss
+++ b/scss/tokens/_typography.scss
@@ -2,7 +2,7 @@
 //   Typography
 // --------------------------------
 
-@use '../core/helpers/unit' as *;
+@use '../helpers/unit' as *;
 
 $font-family: (
   sans: (
