--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -26,5 +26,6 @@ body {
   // background-color: koi.fill(black);
   // background-color: koi.fill(black, $alpha: 0.5);
   // background-color: koi.color(black);
-  background-color: koi.color(black, $alpha: 0.5);
+  // background-color: koi.color(black, $alpha: 0.5);
+  background-color: koi.color(success, 6, 0.9);
 }
