--- a/scss/helpers/_index.scss
+++ b/scss/helpers/_index.scss
@@ -1,3 +1,6 @@
-@forward 'string' as str-*;
 @forward 'map' as map-*;
+@forward 'list' as list-*;
+@forward 'string' as str-*;
 @forward 'color';
+@forward 'unit';
+@forward 'type';
