--- a/scss/api/_index.scss
+++ b/scss/api/_index.scss
@@ -1,18 +1,17 @@
-// @forward 'animation';
-// @forward 'border';
+@forward 'animation';
+@forward 'border';
 @forward 'color';
-// @forward 'duration';
-// @forward 'focus';
-// @forward 'gradient';
-// @forward 'layer';
-// @forward 'layout';
-// @forward 'media-query';
-// @forward 'shadow';
-// @forward 'size';
-// @forward 'spacing';
-// @forward 'svg';
-// @forward 'theme';
-// @forward 'timing';
-// @forward 'transition';
-// @forward 'typography';
-// @forward 'visibility';
+@forward 'duration';
+@forward 'focus';
+@forward 'gradient';
+@forward 'layer';
+@forward 'layout';
+@forward 'media-query';
+@forward 'shadow';
+@forward 'size';
+@forward 'spacing';
+@forward 'svg';
+@forward 'timing';
+@forward 'transition';
+@forward 'typography';
+@forward 'visibility';
