--- a/scss/internal/_color.scss
+++ b/scss/internal/_color.scss
@@ -13,7 +13,7 @@
 //   Functions
 // --------------------------------
 
-@function _css-color-var($name, $shade: null, $alpha: 1) {
+@function css-color-var($name, $shade: null, $alpha: 1) {
   $var-name: if($shade, #{$color-prefix}-#{$name}-#{$shade}, #{$color-prefix}-#{$name});
   @return hsl(css-var(#{$var-name}-h), css-var(#{$var-name}-s), css-var(#{$var-name}-l), $alpha);
 }
@@ -34,12 +34,12 @@
 // Output a CSS custom property (CSS var) color definition
 @mixin color-custom-prop($property, $color-name: null, $value, $suffix: null) {
   @if meta.type-of($value) == 'color' {
-    $var-name: #{-css-var-name($property, $color-name, $suffix)};
+    $var-name: #{css-var-name($property, $color-name, $suffix)};
     @include hsl-color-custom-prop($var-name, $value);
   } @else {
     @each $shade, $shade-value in $value {
       $key: if($color-name and $shade, '#{$color-name}-#{$shade}', $shade);
-      $var-name: #{-css-var-name($property, $key, $suffix)};
+      $var-name: #{css-var-name($property, $key, $suffix)};
       @include hsl-color-custom-prop($var-name, $shade-value);
     }
   }
