--- a/scss/internal/_color.scss
+++ b/scss/internal/_color.scss
@@ -3,6 +3,7 @@
 // --------------------------------
 
 @use 'sass:list';
+@use 'sass:math';
 @use 'sass:meta';
 
 @use '../config/internal' as *;
@@ -13,9 +14,45 @@
 //   Functions
 // --------------------------------
 
-@function css-color-var($name, $shade: null, $alpha: 1) {
+// @function css-color-var($name, $shade: null, $alpha: 1) {
+//   $hsl-parts: css-color-var-parts($name, $shade);
+//   @return hsl(list.nth($hsl-parts, 1), list.nth($hsl-parts, 2), list.nth($hsl-parts, 3), $alpha);
+// }
+
+// Output a theme color as HSL with the channels as CSS custom props vars.
+// To adjust the color one can set its alpha, saturation and/or $lightness.
+@function hsl-color-var($name, $shade: null, $alpha: 1, $saturation: null, $lightness: null, $complement: false) {
+  $hsl-parts: hsl-color-var-parts($name, $shade);
+  $color-hue: list.nth($hsl-parts, 1);
+  $color-saturation: list.nth($hsl-parts, 2);
+  $color-lightness: list.nth($hsl-parts, 3);
+
+  $hue: if($complement, calc($color-hue + 180deg), $color-hue);
+  $saturation: _update-color-channel($color-saturation, $saturation, 100%);
+  $lightness: _update-color-channel($color-lightness, $lightness, 100%);
+
+  @return hsl($hue, $saturation, $lightness, $alpha);
+}
+
+// Return the theme color css var HSL parts (channels)
+@function hsl-color-var-parts($name, $shade: null) {
   $var-name: if($shade, #{$color-prefix}-#{$name}-#{$shade}, #{$color-prefix}-#{$name});
-  @return hsl(css-var(#{$var-name}-h), css-var(#{$var-name}-s), css-var(#{$var-name}-l), $alpha);
+  @return css-var(#{$var-name}-h), css-var(#{$var-name}-s), css-var(#{$var-name}-l);
+}
+
+@function _update-color-channel($current, $scale, $max) {
+  @if ($scale == null) {
+    @return $current;
+  }
+
+  @if math.unit($scale) != '%' {
+    @error "Scale value should be a percentage number beetween 0% and 100%.";
+  }
+
+  $scale: math.div($scale, 100%);
+  $mult: if($scale > 0, calc($max - $current), $current);
+
+  @return clamp(0%, $current + ($mult * $scale), $max);
 }
 
 // --------------------------------
