--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -5,7 +5,7 @@
 // @forward 'config';
 @use 'koi';
 
-// @include koi.theme();
+@include koi.theme();
 @include koi.base();
 
 // << Insert your base styles here >>
@@ -42,6 +42,5 @@ body {
 }
 
 .d {
-  background-color: color.scale(koi.color(warning, 6, 0.9), $lightness: 5%);
-  // background-color: koi.fill(primary, 6);
+  background-color: koi.fill(primary, 6, $lightness: 35%, $saturation: -25%);
 }
