--- a/scss/helpers/_color.scss
+++ b/scss/helpers/_color.scss
@@ -16,7 +16,7 @@
 }
 
 // Returns the HSL channels triplet (hue saturation lightness)
-@function hsl-parts($color) {
+@function hsl-channels($color) {
   @if type-of($color) == 'color' {
     @return color.hue($color) color.saturation($color) color.lightness($color);
   } @else {
@@ -28,6 +28,15 @@
 @function to-rgb($color, $alpha: 1) {
   @if type-of($color) == 'color' {
     @return rgb(color.red($color), color.green($color), color.blue($color), $alpha);
+  } @else {
+    @error "#{$color} is not a valid color object!";
+  }
+}
+
+// Returns the RGB channels triplet (red green blue)
+@function rgb-channels($color) {
+  @if type-of($color) == 'color' {
+    @return color.red($color) color.green($color) color.blue($color);
   } @else {
     @error "#{$color} is not a valid color object!";
   }
