--- a/scss/api/_color.scss
+++ b/scss/api/_color.scss
@@ -6,18 +6,26 @@
 $_default-shade: config(fallbacks, colors);
 // $_default-accent: config(fallbacks, accent);
 
-@function fill($name, $shade: $_default-shade, $alpha: 1, $saturation: null, $lightness: null, $complement: false) {
-  @if is-scheme-color($name, $shade) {
-    @return hsl-color-var($name, $shade, $alpha, $saturation, $lightness, $complement);
-  } @else if is-theme-color($name, $shade) {
-    @return hsl-color-var($name, $shade, $alpha, $saturation, $lightness, $complement);
-  } @else if is-theme-color($name) {
+@function fill(
+  $name,
+  $shade: $_default-shade,
+  $alpha: 1,
+  $saturation: null,
+  $lightness: null,
+  $complement: false,
+  $invert: false
+) {
+  @if is-theme-color($name, $shade) or is-scheme-color($name, $shade) {
+    @return hsl-color-var($name, $shade, $alpha, $saturation, $lightness, $complement, $invert);
+  }
+  @if is-theme-color($name) or is-scheme-color($name) {
     @return hsl-color-var(
       $name,
       $alpha: $alpha,
       $saturation: $saturation,
       $lightness: $lightness,
-      $complement: $complement
+      $complement: $complement,
+      $invert: $invert
     );
   } @else {
     @error "Color #{$name} or #{$name}-#{$shade} not found in theme.";
