--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,5 +1,5 @@
-@forward 'config';
-@forward 'helpers';
-@forward 'theme';
-@forward 'api';
-@forward 'base';
+// @forward 'config';
+// @forward 'helpers';
+// @forward 'theme';
+// @forward 'api';
+// @forward 'base';
